--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,15 @@
         "markdown"
     ],
     "require": {
-        "illuminate/support": "^9.0|^10.0",
+        "php": "^8.2",
+        "illuminate/support": "^9.0|^10.0|^11.0",
         "reecem/mocker": "^1.1",
         "laravel/legacy-factories": "^1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.10",
-        "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "^7.0",
+        "phpunit/phpunit": "^10.0",
+        "mockery/mockery": "^1.6",
+        "orchestra/testbench": "^8.0|^9.0",
         "sempro/phpunit-pretty-print": "^1.0"
     },
     "autoload": {
