--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "require": {
         "php": "^8.2",
         "illuminate/support": "^9.0|^10.0|^11.0",
-        "reecem/mocker": "^1.1",
-        "laravel/legacy-factories": "^1.3"
+        "reecem/mocker": "^1.2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
